<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">1605133096437826</string>
	<string name="name">Enter name</string>
    <string name="password">Enter password</string>
    <string name="app_name">Demo Sample</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="userid">Enter user id</string>
    <string name="waiting_string">Loading please wait...</string>
    <string name="ok">Ok</string>
    <string name="no_network">Please check your internet connection.</string>
    <string name="title_activity_register_screen">RegisterScreen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="designation">Enter designation</string>
    <string name="companyname">Enter company name</string>
    <string name="phonenumber">Enter phone number</string>
    <string name="emailaddress">Enter email address</string>
    <string name="title_activity_base_screen">BaseScreen</string>
    <string name="name_required">Name is required</string>
    <string name="designation_required">Designation is required</string>
    <string name="companyname_required">Company name is required</string>
    <string name="phonenumber_required">Phone number is required</string>
    <string name="password_required">Password is required</string>
    <string name="userid_required">Userid is required</string>
    <string name="request_for_data_again">Something went wrong. Do you want to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userid_not_valid">Userid is not valid</string>
    <string name="title_activity_candidate_feed_screen">CandidateFeedScreen</string>
    <string name="Submit">Submit</string>
    <string name="exit_app">Do you want to close the app?</string>
    <string name="Signout">SignOut</string>
    <string name="revokeaccess">Revoke Access</string>

</resources>