<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.introapp.activities.RegisterScreen">

    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            >

            <EditText
                android:singleLine="true"
                android:id="@+id/userid_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/userid"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_txt_small_size" />

            <View style="@style/divider_horizontal" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:singleLine="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:paddingLeft="@dimen/dp_20"
                android:inputType="textPassword"
                android:paddingRight="@dimen/dp_20"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_txt_small_size" />


            <View style="@style/divider_horizontal" />

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:singleLine="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_txt_small_size" />

            <View style="@style/divider_horizontal" />


            <EditText
                android:id="@+id/phonenumber_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@null"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:hint="@string/phonenumber"
                android:inputType="number"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_txt_small_size" />

            <View style="@style/divider_horizontal" />

            <EditText
                android:id="@+id/companyname_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/companyname"
                android:paddingLeft="@dimen/dp_20"
                android:singleLine="true"
                android:paddingRight="@dimen/dp_20"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_txt_small_size" />

            <View style="@style/divider_horizontal" />

            <EditText
                android:id="@+id/designation_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_50"
                android:singleLine="true"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/designation"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_txt_small_size" />


            <Button
                android:id="@+id/register_btn"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/Register" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
